# dependency-aware-packing

./: .gitignore  AGENTS.md  PROJECT_STRUCTURE.md  README.md  dependency_aware_packing_experiment_plan.md  pyproject.toml
configs/: README.md  experiment_matrix.yaml  packing_default.yaml  pretraining_freeze.yaml
configs/datasets/: external_manifest.example.tsv  frozen_datasets.yaml  python50_repos.tsv  tech_web_seed_manifest.tsv
configs/evaluation/: default.yaml
configs/packing/: default.yaml
configs/relations/: main_high_precision.yaml
configs/training/: 7b_8k_lora.yaml  7b_8k_qlora.yaml
data/: README.md
data/examples/: code_docs.jsonl  external_manifest.tsv
docs/: README.md  concise_experiment_plan.md  macro_experiment_design.md  thesis_scope.md
docs/00_overview/: advisor_project_report.md  design_rationale.md  project_report.md  thesis_scope.md
docs/01_design/: macro_experiment_design.md  method_formalization.md  tech_web_generalization_plan.md
docs/02_metrics/: metrics_definition.md
docs/03_server/: pre_server_optimization_runbook.md  pretraining_freeze_protocol.md  server_deployment_plan.md  server_training_handoff.md
experiments/: README.md
scripts/: README.md  run_packing.py  run_packing_matrix.py  summarize_packing.py
tests/: README.md  test_audit.py  test_collectors.py  test_corpus.py  test_datasculpt_baseline.py  test_dataset_card.py  test_dependency.py  test_edge_annotation.py  test_edge_filter.py  test_edges.py  test_packers.py  test_relation_config.py  test_review.py  test_stats.py  test_tokenization.py  test_validation.py
(+61 files in other folders)
