[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dependency-aware-packing"
version = "0.1.0"
description = "Structure-dependency-aware data packing for low-resource long-context adaptation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Frank"}
]
dependencies = [
  "pyyaml>=6.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
